# CHIP8-Emulator

./: .gitignore  CMakeLists.txt  Clean.bat  README.md  Setup.bat  imgui.ini
CHIP8-Emulator/includes/: Chip8.h  Window.h
CHIP8-Emulator/includes/utils/: ImGui_Utils.h  glad.h
CHIP8-Emulator/srcs/: Chip8.cpp  Chip8.h  Window.cpp  main.cpp
CHIP8-Emulator/srcs/utils/: ImGui_Utils.cpp  glad.cpp
